# mathfluent-scrap

./: .env.example  .gitignore  README.md  bootstrap_prompt.md  docker-compose.prod.yml  docker-compose.yml
.cursor/rules/: cursor-rule-format.mdc  cursor-rules-location.mdc  python-uv.mdc  uv-commands.mdc
backend/: Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
backend/app/: main.py
backend/app/utils/: LLM.py  __init__.py
frontend/: Dockerfile.prod  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: manifest.json  register-sw.js  site.webmanifest  sw.js
frontend/src/components/: DrawingCanvas.tsx
frontend/src/components/ui/: background-lines.tsx  switch.tsx  toggle.tsx
frontend/src/config/: index.ts
frontend/src/pages/: _app.tsx  index.tsx  questions.tsx  review.tsx
frontend/src/store/: useAnswerStore.ts
prompts/: add_review_prompt.md
